Update card binding and remove commented out code

--- a/network-sdk-sample/app/src/main/res/values/strings.xml
+++ b/network-sdk-sample/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="last_name">Last name</string>
     <string name="email">email</string>
     <string name="phone">Phone</string>
+    <string name="card_ending">Card ending ..%s</string>
 
 </resources>
