MOB-3129 UI SDK customisation sample app

--- a/ui-sdk-components-sample/app/src/main/res/values/strings.xml
+++ b/ui-sdk-components-sample/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="stop">Stop</string>
     <string name="book">Book</string>
 
+    <string name="custom_views">Custom Views</string>
+
     <string name="payment_issue">Payment Issue</string>
     <string name="payment_issue_message">There has been an issue with your card</string>
     <string name="add_card">ADD CARD</string>
